; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_objint.c_mp_obj_new_int_from_uint.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_objint.c_mp_obj_new_int_from_uint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MP_SMALL_INT_POSITIVE_MASK = common dso_local global i32 0, align 4
@mp_type_OverflowError = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"small int overflow\00", align 1
@mp_const_none = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_obj_new_int_from_uint(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @MP_SMALL_INT_POSITIVE_MASK, align 4
  %6 = xor i32 %5, -1
  %7 = and i32 %4, %6
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @MP_OBJ_NEW_SMALL_INT(i32 %10)
  store i32 %11, i32* %2, align 4
  br label %15

12:                                               ; preds = %1
  %13 = call i32 @mp_raise_msg(i32* @mp_type_OverflowError, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %14 = load i32, i32* @mp_const_none, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %12, %9
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @MP_OBJ_NEW_SMALL_INT(i32) #1

declare dso_local i32 @mp_raise_msg(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
